Remove codeswing extension file, create the main function to calculate the ideal gas law formula, fix bug with multiple ids and wrap inputs in divs, add grid display to fieldsets.

--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,32 @@ button, input[type="submit"] {
   cursor: pointer;
   font-size: 1em;
 }
+
+
+fieldset {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  border: 1px solid #ccc;
+  margin-bottom: 24px;
+}
+
+legend {
+  font-weight: bold;
+  color: #2a5d84;
+  margin-bottom: 8px;
+}
+
+label, input {
+    display: inline-flex;
+    padding: 4px;
+}
+
+#knownVariables {
+  display: none;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+#result{
+  border: 1px solid #ccc;
+  margin-bottom: 24px;
+}
